[package]
name = "tcloud-archive"
description = "Archive plugin for Tiny Cloud"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
repository = "https://github.com/personal-tiny-cloud/tcloud-archive"
version = "0.0.1"
license = "GPL-3.0"
edition = "2021"

[dependencies]
tcloud-library = { git = "https://github.com/personal-tiny-cloud/tcloud-library", tag = "0.0.1" }
tokio = { version = "1", features = [ "rt", "macros" ] }

